# http-cup

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  requirements.txt
.devcontainer/: Dockerfile  devcontainer.docker.json  devcontainer.json  devcontainer.podman.json  remove.sh  setup.sh  storage.conf
cmake/: Config.cmake.in  DepCollect.cmake  ExportHelper.cmake  FixLoader.cmake
scripts/: vscode.sh
src/: CMakeLists.txt  http.cpp  http.cxx  request.cpp  session.cpp
src/include/: http.h  request.h  response.h
src/internal/: mapper.h  session.h
src/tests/: CMakeLists.txt  session_test.cpp
tests/: CMakeLists.txt
